compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__case_list_guard.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 365
expression: "case [1] { x if x == [1, 2.0] -> 1 _ -> 2 }"
---
----- SOURCE CODE
case [1] { x if x == [1, 2.0] -> 1 _ -> 2 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:26
  │
1 │ case [1] { x if x == [1, 2.0] -> 1 _ -> 2 }
  │                          ^^^

Expected type:

    Int

Found type:

    Float
